--- a/karaf-system/system.features/src/main/resources/template/features.xml
+++ b/karaf-system/system.features/src/main/resources/template/features.xml
@@ -21,11 +21,11 @@
     <feature name="patlego-vm-jdbc-datasource" version="${project.version}">
         <config name="org.ops4j.datasource-karafdb">
             osgi.jdbc.driver.class=org.postgresql.Driver
-            password=karaf_pwd
-            user=karaf
-            url=jdbc:postgresql://postgres-db:5432/karaf_db
+            password=%postgres.password%
+            user=%postgres.username%
+            url=%postgres.url%/%postgres.db%
             dataSourceName=karafdb
-            databaseName=karaf_db
+            databaseName=%postgres.db%
         </config>
         <capability>
             osgi.service;objectClass=javax.sql.DataSource;effective:=active;osgi.jndi.service.name=karafdb
