--- a/karaf-system/system.features/src/main/resources/template/features.xml
+++ b/karaf-system/system.features/src/main/resources/template/features.xml
@@ -23,14 +23,13 @@
     <feature name="patlego-vm-jdbc-datasource" version="${project.version}">
         <config name="org.ops4j.datasource-karafdb">
             osgi.jdbc.driver.class=org.postgresql.Driver
-            password=%postgres.password% 
-            user=%postgres.username% 
-            url=%postgres.url%/%postgres.db% 
-            dataSourceName=karafdb 
+            password=%postgres.password%
+            user=%postgres.username%
+            url=%postgres.url%/%postgres.db%
+            dataSourceName=karafdb
             databaseName=%postgres.db%
         </config>
-        <capability>
-            osgi.service;objectClass=javax.sql.DataSource;effective:=active;osgi.jndi.service.name=karafdb
+        <capability> osgi.service;objectClass=javax.sql.DataSource;effective:=active;osgi.jndi.service.name=karafdb
         </capability>
     </feature>
 
@@ -39,9 +38,16 @@
         <bundle>mvn:commons-dbutils/commons-dbutils/1.7</bundle>
     </feature>
 
-    <feature name="patlego-vm-client" version="${project.version}">
-        <bundle>mvn:io.github.vm.patlego/website.dao/1.0-SNAPSHOT</bundle>
-        <bundle>mvn:io.github.vm.patlego/website.ui/1.0-SNAPSHOT</bundle>
+    <feature name="patlego-vm-client" version="${website.version}">
+        <bundle dependency="true">mvn:com.fasterxml.jackson.core/jackson-core/${jackson.version}</bundle>
+        <bundle dependency="true">mvn:com.fasterxml.jackson.core/jackson-annotations/${jackson.version}</bundle>
+        <bundle dependency="true">mvn:com.fasterxml.jackson.core/jackson-databind/${jackson.version}</bundle>
+        <bundle dependency="true">mvn:com.fasterxml.jackson.module/jackson-module-jaxb-annotations/${jackson.version}</bundle>
+        <bundle dependency="true">mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-base/${jackson.version}</bundle>
+        <bundle dependency="true">mvn:com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider/${jackson.version}</bundle>
+        <bundle>mvn:io.github.vm.patlego/website.dao/${website.version}</bundle>
+        <bundle>mvn:io.github.vm.patlego/website.ui/${website.version}</bundle>
+        <bundle>mvn:io.github.vm.patlego/website.core/${website.version}</bundle>
     </feature>
 
     <feature name="patlego-vm-ocr" version="${project.version}">
