Adding encryption service

--- a/karaf-system/system.features/src/main/resources/template/features.xml
+++ b/karaf-system/system.features/src/main/resources/template/features.xml
@@ -70,6 +70,10 @@
         <bundle>wrap:mvn:xerces/xercesImpl/2.12.0</bundle>
     </feature>
 
+    <feature name="patlego-vm-encryption" version="${project.version}">
+        <bundle>mvn:io.github.vm.patlego/system.encryption/${project.version}</bundle>
+    </feature>
+
     <feature name="patlego-vm-email" version="${project.version}">
         <bundle>mvn:io.github.vm.patlego/system.email/${project.version}</bundle>
     </feature>
