--- a/karaf-system/system.features/src/main/resources/template/features.xml
+++ b/karaf-system/system.features/src/main/resources/template/features.xml
@@ -29,6 +29,7 @@
         <feature>patlego-vm-client</feature>
         <feature>patlego-vm-ocr</feature>
         <feature>patlego-vm-email</feature>
+        <feature>patlego-vm-s3</feature>
     </feature>
 
     <!-- This is to be deleted when we migrate to 4.3.1 -->
@@ -115,6 +116,16 @@
 
     <feature name="patlego-vm-settings" version="${project.version}">
         <bundle>mvn:io.github.vm.patlego/system.settings/${project.version}</bundle>
+    </feature>
+
+    <feature name="patlego-vm-s3" version="${project.version}">
+        <bundle>wrap:mvn:software.amazon.awssdk/s3/2.15.69</bundle>
+        <bundle>wrap:mvn:software.amazon.awssdk/protocol-core/2.15.69</bundle>
+        <bundle>wrap:mvn:software.amazon.awssdk/sdk-core/2.15.69</bundle>
+        <bundle>wrap:mvn:software.amazon.awssdk/utils/2.15.69</bundle>
+        <bundle>wrap:mvn:software.amazon.awssdk/http-client-spi/2.15.69</bundle>
+        <bundle>wrap:mvn:software.amazon.awssdk/annotations/2.15.69</bundle>
+        <bundle>wrap:mvn:org.reactivestreams/reactive-streams/1.0.3</bundle>
     </feature>
 
 </features>
