--- a/karaf-system/system.features/src/main/resources/template/features.xml
+++ b/karaf-system/system.features/src/main/resources/template/features.xml
@@ -119,12 +119,12 @@
     </feature>
 
     <feature name="patlego-vm-s3" version="${project.version}">
-        <bundle>wrap:mvn:software.amazon.awssdk/s3/2.15.69</bundle>
-        <bundle>wrap:mvn:software.amazon.awssdk/protocol-core/2.15.69</bundle>
-        <bundle>wrap:mvn:software.amazon.awssdk/sdk-core/2.15.69</bundle>
-        <bundle>wrap:mvn:software.amazon.awssdk/utils/2.15.69</bundle>
-        <bundle>wrap:mvn:software.amazon.awssdk/http-client-spi/2.15.69</bundle>
-        <bundle>wrap:mvn:software.amazon.awssdk/annotations/2.15.69</bundle>
+        <bundle>wrap:mvn:software.amazon.awssdk/s3/${aws.sdk.version}</bundle>
+        <bundle>wrap:mvn:software.amazon.awssdk/protocol-core/${aws.sdk.version}</bundle>
+        <bundle>wrap:mvn:software.amazon.awssdk/sdk-core/${aws.sdk.version}</bundle>
+        <bundle>wrap:mvn:software.amazon.awssdk/utils/${aws.sdk.version}</bundle>
+        <bundle>wrap:mvn:software.amazon.awssdk/http-client-spi/${aws.sdk.version}</bundle>
+        <bundle>wrap:mvn:software.amazon.awssdk/annotations/${aws.sdk.version}</bundle>
         <bundle>wrap:mvn:org.reactivestreams/reactive-streams/1.0.3</bundle>
     </feature>
 
