--- a/karaf-system/system.features/src/main/resources/template/features.xml
+++ b/karaf-system/system.features/src/main/resources/template/features.xml
@@ -29,7 +29,7 @@
         <feature>patlego-vm-client</feature>
         <feature>patlego-vm-ocr</feature>
         <feature>patlego-vm-email</feature>
-        <feature>patlego-vm-s3</feature>
+        <feature>patlego-vm-aws</feature>
     </feature>
 
     <!-- This is to be deleted when we migrate to 4.3.1 -->
@@ -118,7 +118,7 @@
         <bundle>mvn:io.github.vm.patlego/system.settings/${project.version}</bundle>
     </feature>
 
-    <feature name="patlego-vm-s3" version="${project.version}">
+    <feature name="patlego-vm-aws" version="${project.version}">
         <bundle>wrap:mvn:software.amazon.awssdk/s3/${aws.sdk.version}/$Bundle-SymbolicName=aws-sdk-s3&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.services.s3.*;version=&quot;${aws.sdk.version}&quot;</bundle>   
         <bundle>wrap:mvn:software.amazon.awssdk/protocol-core/${aws.sdk.version}/$Bundle-SymbolicName=aws-sdk-protocol-core&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.protocols.*;version=&quot;${aws.sdk.version}&quot;</bundle>
         <bundle>wrap:mvn:software.amazon.awssdk/sdk-core/${aws.sdk.version}/$Bundle-SymbolicName=aws-sdk-core&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.core.*;version=&quot;${aws.sdk.version}&quot;</bundle>
@@ -127,13 +127,19 @@
         <bundle>wrap:mvn:software.amazon.awssdk/annotations/${aws.sdk.version}/$Bundle-SymbolicName=aws-sdk-annotations&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.annotations.*;version=&quot;${aws.sdk.version}&quot;</bundle>
         <bundle>wrap:mvn:software.amazon.awssdk/aws-core/${aws.sdk.version}/$Bundle-SymbolicName=aws-core&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.awscore.*;version=&quot;${aws.sdk.version}&quot;</bundle>
         <bundle>wrap:mvn:software.amazon.awssdk/regions/${aws.sdk.version}/$Bundle-SymbolicName=aws-regions&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.regions.*;version=&quot;${aws.sdk.version}&quot;</bundle>
-        <bundle>wrap:mvn:software.amazon.awssdk/auth/${aws.sdk.version}/$Bundle-SymbolicName=aws-auth&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.auth.*;version=&quot;${aws.sdk.version}&quot;</bundle>
+        <bundle>wrap:mvn:software.amazon.awssdk/auth/${aws.sdk.version}/$Bundle-SymbolicName=aws-auth&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.auth.*;version=&quot;${aws.sdk.version}&quot;</bundle>    
+        <feature>patlego-vm-apache-httpclient</feature>
         <bundle>wrap:mvn:software.amazon.awssdk/apache-client/${aws.sdk.version}/$Bundle-SymbolicName=aws-apache-client&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.http.apache.*;version=&quot;${aws.sdk.version}&quot;</bundle>
         <bundle>wrap:mvn:software.amazon.awssdk/metrics-spi/${aws.sdk.version}/$Bundle-SymbolicName=aws-metrics-spi&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.metrics.*;version=&quot;${aws.sdk.version}&quot;</bundle>
         <bundle>wrap:mvn:software.amazon.awssdk/aws-xml-protocol/${aws.sdk.version}/$Bundle-SymbolicName=aws-xml-protocol&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.protocols.xml.*;version=&quot;${aws.sdk.version}&quot;</bundle>
         <bundle>wrap:mvn:software.amazon.awssdk/aws-query-protocol/${aws.sdk.version}/$Bundle-SymbolicName=aws-query-protocol&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.protocols.query.*;version=&quot;${aws.sdk.version}&quot;</bundle>
         <bundle>wrap:mvn:software.amazon.awssdk/profiles/${aws.sdk.version}/$Bundle-SymbolicName=aws-profiles&amp;Bundle-Version=${aws.sdk.version}&amp;Export-Package=software.amazon.awssdk.profiles.*;version=&quot;${aws.sdk.version}&quot;</bundle>
         <bundle>mvn:io.github.vm.patlego/system.aws/${project.version}</bundle>
+    </feature>
+
+    <feature name="patlego-vm-apache-httpclient" version="${project.version}">
+        <bundle>mvn:org.apache.httpcomponents/httpcore-osgi/4.4.14</bundle>
+        <bundle>mvn:org.apache.httpcomponents/httpclient-osgi/4.5.13</bundle>
     </feature>
 
 </features>
