--- a/karaf-system/system.features/src/main/resources/template/features.xml
+++ b/karaf-system/system.features/src/main/resources/template/features.xml
@@ -111,9 +111,7 @@
     </feature>
 
     <feature name="patlego-vm-html" version="${project.version}">
-        <bundle>mvn:com.github.jknack/handlebars/4.2.0</bundle>
-        <bundle>mvn:org.reflections/reflections/0.9.12</bundle>
-        <bundle>mvn:org.javassist/javassist/3.26.0-GA</bundle>
+        <bundle>mvn:com.github.jknack/handlebars/${handlebars.compiler.version}</bundle>
         <bundle>mvn:io.github.vm.patlego.html/html.core/${html.version}</bundle>
     </feature>
 
