--- a/karaf-system/system.core/core.features/src/main/resources/template/features.xml
+++ b/karaf-system/system.core/core.features/src/main/resources/template/features.xml
@@ -18,6 +18,9 @@
 -->
 <features name="io.github.vm.patlego-{project.version}" xmlns="http://karaf.apache.org/xmlns/features/v1.3.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://karaf.apache.org/xmlns/features/v1.3.0 http://karaf.apache.org/xmlns/features/v1.3.0">
 
+    <!-- <repository>mvn:org.apache.karaf.features/spring-legacy/4.3.0/xml/features</repository>
+    <repository>mvn:org.apache.activemq/activemq-karaf/[5.14,6)/xml/features</repository> -->
+
     <feature name="patlego-vm" version="${project.version}">
         <feature>patlego-vm-ioutils</feature>
         <feature>patlego-vm-gson</feature>
@@ -133,6 +136,27 @@
     <feature name="patlego-vm-html-samples" version="${project.version}">
         <feature>patlego-vm-html</feature>
         <bundle>mvn:io.github.vm.patlego.html/examples.simple/${html.version}</bundle>
+    </feature>
+
+    <feature name="patlego-vm-example-activemq" version="${project.version}">
+        <feature version="[4,5)">spring</feature>
+        <feature>aries-blueprint</feature>
+        <feature>shell-compat</feature>
+    </feature>
+
+    <feature name="patlego-vm-example-jms-connectionfactory" version="${project.version}">
+        <feature>activemq-client</feature>
+        <feature>jms</feature>
+        <feature>pax-jms-activemq</feature>
+        <config name="org.ops4j.connectionfactory-activemq1">
+            name=patlego-vm-activemq1
+            osgi.jndi.service.name=jms/patlego-vm-activemq1
+            password=karaf
+            pool=transx
+            type=activemq
+            url=tcp://localhost:61616
+            user=karaf
+        </config>
     </feature>
 
 </features>
